--- a/css/header.css
+++ b/css/header.css
@@ -21,6 +21,12 @@
   text-decoration: none;
   color: #141414;
   display: block;
+  border-bottom: 2px solid white;
+  transition: all 0.5s;
+}
+
+.header-menu a:hover {
+  border-bottom: 2px solid #36A1DD;
 }
 
 @media (max-width: 800px) {
