--- a/css/introducao.css
+++ b/css/introducao.css
@@ -9,8 +9,9 @@
 }
 
 .introducao h1 {
-  font-size: 4.5rem;
-  line-height: 1.125;
+  font-family: 'Rasa', serif;
+  font-size: 5rem;
+  line-height: 1;
   margin-bottom: 30px;
   position: relative;
 }
@@ -20,7 +21,7 @@
   display: block;
   width: 150px;
   height: 150px;
-  background: url('../img/detalhe.svg') no-repeat;
+  background: url('../img/deco.svg') no-repeat;
   position: absolute;
   top: -25px;
   left: -42px;
