--- a/css/formacao.css
+++ b/css/formacao.css
@@ -92,7 +92,8 @@
 }
 
 .formacao-extra h3 {
-  font-size: 0.875rem;
+  font-family: 'Rasa', serif;
+  font-size: 1.125rem;
   line-height: 1.4;
   color: #8f8f8f;
   text-transform: uppercase;
@@ -107,15 +108,15 @@
   height: 24px;
   position: absolute;
   left: -36px;
-  top: -4px;
+  top: -3px;
 }
 
 .cursos h3::before {
-  background: url(../img/cursos.svg) no-repeat center center;
+  background: url(../img/cursos-af.svg) no-repeat center center;
 }
 
 .idiomas h3::before {
-  background: url(../img/idiomas.svg) no-repeat center center;
+  background: url(../img/idiomas-af.svg) no-repeat center center;
 }
 
 .formacao-extra li {
