alguns estilos modificados, responsividade atualizada.

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -57,7 +57,7 @@
   flex-direction: column;
 }
 
-.faculadde-tipo {
+.faculdade-tipo {
   font-size: 0.875rem;
   text-transform: uppercase;
   color: #a3a3a3;
